--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,43 @@
 .App {
-  text-align: center;
+	text-align: center;
+	min-width: 100%;
+	min-height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.loginContainer {
+	width: 30rem;
+	height: 35rem;
+	background-color: white;
+	border-radius: .2rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+header {
+	width: 100%;
+
+	height: 50px;
+	background: #0a66c9;
+	border-bottom: 1px solid #0655aa;
+	color: white;
 }
 
-.App-link {
-  color: #61dafb;
+header > h1 {
+	font-size: 1.6rem;
+	padding: 1.7rem 40px;
+
+	margin: 0;
+	letter-spacing: 1px;
+	text-align: left;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.login-form__body {
+	padding: 4rem;
+	text-align: left;
+}
+
+.root {
+	min-height: 100vh;
 }
